--- a/main/src/styles/styles.css
+++ b/main/src/styles/styles.css
@@ -16,7 +16,7 @@ body {
   }
   
   header {
-    background-color: #222;
+    background-color: #154557;
     color: white;
     padding: 20px;
     text-align: center;
@@ -61,21 +61,65 @@ body {
     margin: auto;
     flex: 1;
   }
-  
-  .project {
-    background-color: white;
-    margin: 1em 0;
-    padding: 1em;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
   
-  .project img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: 0.5em 0;
+  .profile img {
+    border-radius: 40%;
+    border: 3px solid #ccc;
   }
+
+   /* Portfolio Component Styles */
+.portfolio {
+  padding: 20px;
+}
+
+.portfolio h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.portfolio-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.project-item {
+  text-align: center;
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #f9f9f9;
+}
+
+.project-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
+.project-item h3 {
+  margin: 10px 0;
+}
+
+.project-item .links a {
+  display: block;
+  margin: 5px 0;
+  text-decoration: none;
+  color: #007bff;
+}
+
+.project-item .links a:hover {
+  text-decoration: underline;
+}
+
   
   h1 {
     font-size: 36px;
@@ -108,17 +152,26 @@ body {
   }
   
   .footer {
-    background-color: #222;
+    display: flex;
+    justify-content:center;
+    background-color: #154557;
     color: white;
     padding: 20px;
   }
   
-  .footer p {
-    font-size: 16px;
-    margin: 0;
-    text-align: center;
+  .footer .icon {
+    margin: 0 10px;
+    color: #fff;
+    width: 26px;
+    height: 26px;
+    transition: transform 0.3s, color 0.3s;
   }
   
+  .footer .icon:hover {
+    color: #007bff;
+    transform: scale(1.1);
+  }
+
   /* Responsive adjustments */
   @media (max-width: 600px) {
     body {
@@ -166,7 +219,7 @@ body {
       padding: 10px;
     }
   
-    footer p {
+    footer {
       font-size: 14px;
     }
   }
