--- a/main/src/styles/styles.css
+++ b/main/src/styles/styles.css
@@ -84,40 +84,53 @@ body {
   margin-bottom: 20px;
 }
 
-.portfolio-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+.portfolio-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* Distribute space evenly */
   gap: 20px;
 }
 
 .project-item {
   text-align: center;
   border: 1px solid #ccc;
-  padding: 10px;
   border-radius: 10px;
   overflow: hidden;
-  background-color: #f9f9f9;
+  height: 300px;
+  width: 300px;
 }
 
-.project-item img {
-  max-width: 100%;
-  height: auto;
+.project-item .project-image {
+  width: 100%;
+  height: 200px; /* Adjust the height as needed */
+  background-size: contain; /* Ensure the entire image is visible */
+  background-position: center;
+  background-repeat: no-repeat; /* Prevent tiling */
   border-radius: 10px;
+  margin-bottom: 10px;
 }
+
 
 .project-item h3 {
   margin: 10px 0;
 }
 
-.project-item .links a {
-  display: block;
-  margin: 5px 0;
-  text-decoration: none;
-  color: #007bff;
+.project-item .links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
-.project-item .links a:hover {
-  text-decoration: underline;
+.project-item .links a img.icon {
+  width: 24px; /* Adjust size as needed */
+  height: 24px; /* Adjust size as needed */
+  transition: transform 0.3s, opacity 0.3s;
+}
+
+.project-item .links a img.icon:hover {
+  opacity: 0.7;
+  transform: scale(1.1);
 }
 
   
